# sys-dev

./: .gitignore  CMakeLists.txt  main.cpp  scp.sh  test.cpp
common/: CMakeLists.txt  common.h  graphic.c  rules.mk  task.c
src/: CMakeLists.txt  beginer.cpp  beginer.h  bluetooth.cpp  bluetooth.h  chess.cpp  chess.h  controller.cpp  controller.h  main.cpp  message.cpp  message.h  moveTrial.cpp  moveTrial.h  show.cpp  show.h  source.h
